third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/multiline-no-close-3.stderr
TOML parse error at line 4, column 7
  |
4 | eteta
  |       ^
invalid multiline basic string
